# git-profile

./: Cargo.toml  README.md  install.ps1  install.sh
.github/workflows/: release.yml
src/: config.rs  main.rs
src/commands/: clone.rs  init.rs  mod.rs  profile.rs  use.rs
