[package]
name = "gitp"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
dialoguer = "0.11"


[profile.release]
opt-level = "z"       # ou "s" pour un bon équilibre
lto = true
codegen-units = 1
strip = "symbols"     # à partir de Rust 1.60+

